Making new version of app

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ driverClassName=org.sqlite.JDBC
 spring.datasource.url=jdbc:sqlite://127.0.0.1:5432/stockmenagement 
 spring.datasource.username=postgre
 spring.datasource.password=postgre
-spring.jpa.hibernate.ddl-auto=create-drop 
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.community.dialect.SQLiteDialect 
 spring.jpa.properties.hibernate.format_sql=true
